# mite_data

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  pyproject.toml  reserved_accessions.json
.github/: ci.yml  mite_validation.py
.github/workflows/: ci.yml  ci_pr_main.yml  ci_push_main.yml  create_artifacts.yml  housekeeping.yml  validate_artifacts.yml  validate_entry.yml
aout/: MITE0000056.json  MITE0000059.json
backup_tests/: test_main.py
backup_tests/mock_metadata/: metadata_mibig.json
data/: MITE0000001.json  MITE0000002.json  MITE0000003.json  MITE0000004.json  MITE0000005.json  MITE0000006.json  MITE0000007.json  MITE0000008.json  MITE0000009.json  MITE0000010.json  MITE0000011.json  MITE0000012.json  MITE0000013.json  MITE0000014.json  MITE0000015.json  MITE0000016.json  MITE0000017.json  MITE0000018.json  MITE0000019.json  MITE0000020.json  MITE0000021.json  MITE0000022.json  MITE0000023.json  MITE0000024.json  MITE0000025.json  MITE0000026.json  MITE0000027.json  MITE0000028.json  MITE0000029.json  MITE0000030.json  MITE0000031.json  MITE0000032.json  MITE0000033.json  MITE0000034.json  MITE0000035.json  MITE0000036.json  MITE0000037.json  MITE0000038.json  MITE0000039.json  MITE0000040.json  (+133 more)
mite_data/: generate_png.sh  main.py  reserved_accessions.json
mite_data/data/: 01d78f72-1d56-11f1-a292-d71f0d004c33.json  02cd10ee-37c5-11f1-8f25-9b0d34c97d5b.json  036e0236-390c-11f1-8f25-9b0d34c97d5b.json  06cfb708-3740-11f1-8f25-9b0d34c97d5b.json  07b908b2-285f-11f1-a84b-590077d57156.json  096651c2-37c0-11f1-8f25-9b0d34c97d5b.json  0b6335f8-115a-11f1-8244-9f391af45cf2.json  0dbbc78e-13c1-11f1-8244-9f391af45cf2.json  0e0c24a4-e4eb-11f0-abdb-8218ec668ab3.json  0e76f5d8-285f-11f1-a84b-590077d57156.json  11af5fc4-3741-11f1-8f25-9b0d34c97d5b.json  11b4f584-e70e-11f0-a1a9-8218ec668ab3.json  1336c90e-2774-11f1-a84b-590077d57156.json  136d0860-396d-11f1-8f25-9b0d34c97d5b.json  14787dbe-e555-11f0-a1a9-8218ec668ab3.json  1591dddc-9495-11f0-ad42-5654d2504323.json  15bdd25e-2854-11f1-a84b-590077d57156.json  170c32aa-ec85-11f0-8cfa-42e140a9826e.json  1992bc64-2895-11f1-a84b-590077d57156.json  19d8f3ce-377b-11f1-8f25-9b0d34c97d5b.json  19ff4120-3710-11f1-8f25-9b0d34c97d5b.json  1b8eb284-27a0-11f1-a84b-590077d57156.json  1d251354-32c7-11f1-8f25-9b0d34c97d5b.json  1e1b26b2-377d-11f1-8f25-9b0d34c97d5b.json  1f8fe844-bf22-11f0-b219-2a1693e7738c.json  2047a0ec-3731-11f1-8f25-9b0d34c97d5b.json  21841cc0-32c6-11f1-8f25-9b0d34c97d5b.json  21eaec30-c87b-11f0-963f-16418a2d66d3.json  24a725d0-3ab6-11f1-8f25-9b0d34c97d5b.json  2679a116-283d-11f1-a84b-590077d57156.json  26ae7ebc-2915-11f1-a84b-590077d57156.json  283e27f2-26f2-11f1-a84b-590077d57156.json  286d8ed0-2890-11f1-a84b-590077d57156.json  28958ca4-2909-11f1-a84b-590077d57156.json  2959f1b4-3775-11f1-8f25-9b0d34c97d5b.json  29616610-3716-11f1-8f25-9b0d34c97d5b.json  29df1264-2fbd-11f1-8f25-9b0d34c97d5b.json  2b228cd4-3777-11f1-8f25-9b0d34c97d5b.json  2bcf3052-3965-11f1-8f25-9b0d34c97d5b.json  2eae428c-377a-11f1-8f25-9b0d34c97d5b.json  (+491 more)
mite_data/fasta/: AAD28495.1.fasta  AAD28496.1.fasta  AAK83180.1.fasta  AAK83184.1.fasta  AAK83186.1.fasta  AAL33761.1.fasta  AAM33672.1.fasta  AAM33673.1.fasta  AAM70343.1.fasta  AAM70353.1.fasta  AAM70356.1.fasta  AAM94799.1.fasta  AAM97314.1.fasta  AAN01208.1.fasta  AAN01209.1.fasta  AAN01210.1.fasta  AAN01211.1.fasta  AAN01216.1.fasta  AAS98776.1.fasta  ABI22137.1.fasta  ABS50452.1.fasta  ABS50458.1.fasta  ABS50465.1.fasta  ABV56597.1.fasta  ABV56598.1.fasta  ABY66018.1.fasta  ABY66020.1.fasta  ACN64830.1.fasta  ACN64833.1.fasta  ADC45587.1.fasta  ADE22292.1.fasta  ADE34484.1.fasta  ADE34498.1.fasta  ADE34508.1.fasta  ADK32563.1.fasta  ADO85571.1.fasta  ADO85575.1.fasta  ADO85576.1.fasta  ADO85579.1.fasta  ADY00134.1.fasta  (+456 more)
mite_data/metadata/: artifact_metadata.json  dump_smarts.csv  dump_smiles.csv  efi_est.fasta  metadata_as.json  metadata_efi_est.csv  metadata_general.json  metadata_mibig.json  mite_prot_accessions.csv  product_list.pickle  reaction_fps.pickle  substrate_list.pickle  summary.csv
mite_data/mibig/: mibig_proteins.json
mite_data/modules/: blast_manager.py  cli_manager.py  fasta_manager.py  img_manager.py  metadata_manager.py  mite_manager.py  molfile_manager.py
mite_data/validation/: mite_validation.py
mite_data_lib/config/: config.py  filenames.py  logging.py
mite_data_lib/models/: metadata.py  mibig.py  molfiles.py  reserved.py  summary.py  validation.py
mite_data_lib/reference/: mibig.py
mite_data_lib/rules/: artifact_rules.py  data_rules.py  fasta_rules.py  release_rules.py  repo_rules.py
pipeline/: create_artifacts.py  create_artifacts_all.py  create_artifacts_single.py  create_mibig.py  entry_valid.py  validate_artifacts.py  validate_entry.py  validate_mibig.py
tests/: conftest.py  test_fasta_manager.py  test_main.py  test_metadata_manager.py  test_mite_validator.py  test_molfile_manager.py
(+60 files in other folders)
